--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Apr 19 16:12:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/Makefile.am: Add 2 missing vbox files to EXTRA_DIST
+
 Sun Apr 19 16:00:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Add command line tool for validating XML and improve POD docs
