--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Apr 19 16:49:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/virterror.c: Add missing 'break' in error code string
+	formatter.
+
 Sun Apr 19 16:29:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Improve error reporting for lookup failures on inactive domains
