--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Apr 20 12:54:02 GMT 2009 Mark McLoughlin <markmc@redhat.com>
+
+	* docs/virsh.pod, virsh.1: fix typo reported by Robert P. J. Day
+
 Mon Apr 20 11:24:23 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* po/*: merge in a lot of localization updates and regenerate
