--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Apr 21 15:38:29 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* docs/drvvbox.html.in docs/drvvbox.html: tiny fixes to VirtualBox
+	  docs
+
 Tue Apr 21 14:22:03 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* docs/drvvbox.html.in docs/hvsupport.html.in docs/drivers.html.in
