* src/network_conf.c src/network_conf.h: add dynamic bridge names   support, patch by Soren Hansen * AUTHORS: add Soren daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -69,6 +69,7 @@ Patches have also been contributed by:
   Florian Vichot       <florian.vichot@diateam.net>
   Takahashi Tomohiro   <takatom@jp.fujitsu.com>
   Serge E. Hallyn      <serue@us.ibm.com>
+  Soren Hansen         <soren@ubuntu.com>
 
   [....send patches to get your name here....]
 
