--- a/AUTHORS
+++ b/AUTHORS
@@ -69,7 +69,7 @@ Patches have also been contributed by:
   Florian Vichot       <florian.vichot@diateam.net>
   Takahashi Tomohiro   <takatom@jp.fujitsu.com>
   Serge E. Hallyn      <serue@us.ibm.com>
-  Soren Hansen         <soren@ubuntu.com>
+  Soren Hansen         <soren@canonical.com>
 
   [....send patches to get your name here....]
 
