--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Apr 24 12:06:47 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* po/*: updated a could of locale, regenerated
+	* docs/libvirt-api.xml docs/libvirt-refs.xml: regenerated too
+
 Wed Apr 22 15:28:03 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/network_driver.c: Explicit check for NULL, to avoid
