--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Apr 24 15:55:56 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* NEWS configure.in libvirt.spec.in docs/*: release of 0.6.3
+	* po/*: regenerated
+	* src/libvirt.c src/virterror.c: fixed some function comments
+
 Fri Apr 24 14:07:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Add virNodeDeviceCreateXML / virNodeDeviceDestroy boilerplate
