--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Apr 28 11:54:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	Fix check for -Wformat-security which depends on -Wformat
+	* m4/compiler-flags.m4: Set previously verified compiler flags
+	when checking new flags
+	* srv/virsh.c: Fix three non-critical format string bugs
+
 Fri Apr 24 15:55:56 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* NEWS configure.in libvirt.spec.in docs/*: release of 0.6.3
