virExec: Delay daemonizing as long as possible.
This way the caller can catch more errors (e.g. from a hook callback) from
the intermediate process.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon May  4 11:42:01 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/util.c: virExec: Delay daemonizing as long as possible.
+
 Mon May  4 11:40:27 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/util.c: Add some documentation to __virExec and virExec
