--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon May  4 11:44:09 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/storage_backend_fs.c: Fix a comment typo in storage_backend_fs.c
+
 Mon May  4 11:42:01 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/util.c: virExec: Delay daemonizing as long as possible.
