--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue May  5 10:16:56 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/libvirt.c: Use proper error code in virStorageVolCreateXML
+
 Mon May  4 11:44:09 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/storage_backend_fs.c: Fix a comment typo in storage_backend_fs.c
