--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed May  6 10:19:36 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/qemu_driver.c : Refresh QEMU driver capabilities for each
+	getCapabilities call.
+
 Wed May  6 15:42:08 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/vbox/vbox_driver.c src/vbox/vbox_tmpl.c: changes in
