Fix qemu driver's interpretation of <hostdev managed='yes'/>
This change:

  Tue Mar  3 08:55:13 GMT 2009 Daniel P. Berrange <berrange@redhat.com>

       Don't try to detach & reset PCI devices while running test
       suite for XML-> ARGV conversion.
       * src/qemu_driver.c: Add qemuPrepareHostDevices() helper to
       detach and reset PCI devices.
       * src/qemu_conf.c: Don't detach & reset PCI devices while
       building the command line argv

accidentally did this:

-            if (hostdev->managed) {
+        if (!hostdev->managed) {

Which results in managed='yes' not causing the device to be
detached when the guest is starting.

Signed-off-by: Mark McLoughlin <markmc@redhat.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed May  6 16:55:02 GMT 2009 Mark McLoughlin <markmc@redhat.com>
+
+	* src/qemu_driver.c: fix handling of <hostdev managed='yes'>
+
 Wed May  6 10:19:36 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/qemu_driver.c : Refresh QEMU driver capabilities for each
