--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu May  7 09:26:50 CEST 2009 Guido Günther <agx@sigxcpu.org>
+
+	* src/util.c (virFileWritePid): check for NULL pointers
+	  to avoid bogus pid files
+	  (virFileReadPid): likewise
+	  (virFileDeletePid): likewise
+
 Thu May  7 09:24:47 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/domain_conf.c src/domain_conf.h: parse and save multiple
