--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri May  8 11:05:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/driver.c: Log dlopen related errors at higher log level
+	so important messages are visible by default
+
 Fri May  8 10:56:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* include/libvirt/virterror.h, src/virterror.c: Add new error
