--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri May  8 11:10:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu_driver.c: Make name & UUID uniqueness checking in
+	define, create & restore functions more robust. Throw error
+	in destory operation, if guest isn't running
+
 Fri May  8 11:07:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_conf.c: Enable migrate/save/restore for QEMU
