--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri May  8 12:09:12 CEST 2009 Guido Günther <agx@sigxcpu.org>
+
+	* src/vbox/vbox_tmpl.c (vboxUninitialize): fix crash when init fails
+	  early (i.e. due to vbox not being installed)
+
 Fri May  8 11:10:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_driver.c: Make name & UUID uniqueness checking in
