--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri May  8 11:24:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/cgroup.c: Create cgroups mode 755, not 655 (Ryota Ozaki)
+
 Fri May  8 11:22:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	Fix /dev/ population to use char devices (Ryota Ozaki)
