--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon May 11 09:29:52 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/libvirt_private.syms src/util.[ch]: Add a helper function
+	virExecDaemonize
+	* src/proxy_internal.c src/qemu_driver.c src/uml_driver.c
+	src/remote_driver.c: Use the new helper.
+
 Mon May 11 11:54:53 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/vbox/vbox_tmpl.c: "Host only" and "Internal" network support
