Add pidfile argument to __virExec
virExec will write out the pid of the daemonized process only. Use this
in the QEMU driver, rather than QEMU's pidfile, so we can catch errors we
might miss if the emulator bails early.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Mon May 11 09:44:40 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/util.[ch] : Add pidfile argument to __virExec
+	* src/proxy_internal.c src/qemu_driver.c src/uml_driver.c
+	src/remote_driver.c: Adjust virExecDaemonize calls accordingly.
+	* src/qemu_conf.c : No longer pass -pidfile argument to qemu
+	* tests/qemuxml2argvdata/*.args : Remove qemu -pidfile argument.
+
 Mon May 11 09:35:26 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/qemu_driver.c: Report qemu log data if we fail to daemonize.
