--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon May 11 09:51:00 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/qemu_driver.c : Check that QEMU is still alive while
+	reading startup output.
+
 Mon May 11 09:44:40 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/util.[ch] : Add pidfile argument to __virExec
