* src/network_driver.c: enable bridges which are not up   without an IP address, patch by Ludwig Nussel Daniel

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue May 12 17:25:52 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/network_driver.c: enable bridges which are not up, i.e.
+	  without an IP address, patch by Ludwig Nussel
+
 Mon May 11 16:25:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/datatypes.c: Change hash destructors to call the internal
