Virsh commands vol-clone and vol-create-from
vol-clone is a convenience function, requiring only a volume to clone and a
new name.

vol-create-from is a direct mapping to the public API, which allows cloning
across pools, converting between formats, etc, but requires an xml file to be
passed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue May 12 16:16:09 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/virsh.c: Virsh commands vol-clone and vol-create-from
+
 Tue May 12 16:14:43 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/test.c: Test driver implementation of
