Break out FS volume build routines to their own functions.
Improves readability, particularly wrt the pending CreateFromXML changes.
This will also help implementing File->Block volume creation in the future,
since some of this code will need to be moved to a backend agnostic file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue May 12 16:25:59 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/storage_backend_fs.c: Break out FS volume build routines to
+	their own functions.
+
 Tue May 12 16:16:09 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/virsh.c: Virsh commands vol-clone and vol-create-from
